# Omni-Server

./: .dockerignore  .env  .env.example  .gitignore  DEPLOYMENT.md  FRAUD_DETECTION_SUMMARY.md  LICENSE  QUICK_START.md  README.md  TRANSACTION_FLOW.md  docker-compose.yaml  makefile
.github/workflows/: deploy-gke.yaml  deploy-swarm.yaml
0-nginx/: nginx-swarm.conf  nginx.conf
1-users/: Dockerfile  README.md  go.mod  go.sum
1-users/src/: main.go
2-notification/: .dockerignore  .env.example  Dockerfile  NOTIFICATIONS.md  pyproject.toml  run.sh
2-notification/app/api/: database.py  kafka_consumer.py  main.py  models.py  routes.py  websocket_manager.py
3-wallet/: Dockerfile  INTEGRATION_SUMMARY.md  ROUTE_TEST.md  VIRTUAL_CARDS_API.md  WALLET_API.md  go.mod  go.sum  start.sh
3-wallet/src/: Readme.md  TODO.md  main.go
4-transactions/: Dockerfile  INTEGRATION.md  README.md  SETUP_COMPLETE.md  TRANSACTIONS_API.md  go.mod  go.sum
4-transactions/src/: main.go
4-transactions/transaction/: models.py  schema.py  utils.py
5-fraud-detection/: Dockerfile  FRAUD_DETECTION_RULES.md  README.md  go.mod
5-fraud-detection/ml-expample i need to train my own/: cleanup.py  config.py  deployment.py  evaluation.py  models.py  (+3 more)
docker-swarm/: .env.production  README.md  deploy-local.sh  deploy.sh  local-build.sh  setup-digitalocean.sh  stack-local.yaml  stack.yaml
k8s/: README.md  build-and-push.sh  configmap.yaml  deploy.sh  hpa.yaml  namespace.yaml  nginx-deployment.yaml  redis-statefulset.yaml  secret.yaml  setup-gke.sh  update-deployment.sh  user-service-deployment.yaml
(+91 files in other folders)
